@startuml
title OAuth Login – Package Structure (Phase 1)

package pt.psoft.g1.psoftg1.configuration {
  class SecurityConfig
  class OAuthHandlerConfig
  class OAuthAuthenticationSuccessHandler
}

package pt.psoft.g1.psoftg1.usermanagement.api {
  class UserView
  class UserViewMapper
}

package pt.psoft.g1.psoftg1.usermanagement.model {
  class User
}

package pt.psoft.g1.psoftg1.usermanagement.repositories {
  class UserRepository
}

package org.springframework.security.oauth2.jwt {
  class JwtEncoder
}

' --- relationships ---
SecurityConfig --> OAuthHandlerConfig : uses bean
OAuthHandlerConfig --> OAuthAuthenticationSuccessHandler : creates

OAuthAuthenticationSuccessHandler --> UserRepository : uses
OAuthAuthenticationSuccessHandler --> JwtEncoder : uses
OAuthAuthenticationSuccessHandler --> UserViewMapper : uses
OAuthAuthenticationSuccessHandler --> User : reads/writes
UserViewMapper --> UserView : creates

@enduml
